src/test/ui/panic-implementation/panic-implementation-std.stderr
error[E0152]: duplicate lang item found: `panic_impl`.
  --> $DIR/panic-implementation-std.rs:18:1
   |
LL | / fn panic(info: PanicInfo) -> ! {
LL | |     loop {}
LL | | }
   | |_^
   |
   = note: first defined in crate `std`.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0152`.
